--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,11 @@
     "extends": [
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
-        "plugin:react/recommended"
+        "plugin:react/recommended",
+        "plugin:import/recommended",
+        "plugin:import/errors",
+        "plugin:import/warnings",
+        "plugin:import/typescript"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -21,6 +25,7 @@
         "no-console": "warn",
         "import/prefer-default-export": "off",
         "react/jsx-no-useless-fragment": "warn",
+        "@typescript-eslint/no-non-null-assertion": "off",
         "import/order": [
             "error",
             {
