--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@types/redux-form": "^8.3.5",
     "firebase": "^9.23.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
+    "redux-form": "^8.3.10",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
