--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
         "react"
     ],
     "rules": {
+        "no-debugger": "warn",
         "no-console": "warn",
         "import/prefer-default-export": "off",
         "react/jsx-no-useless-fragment": "warn",
