--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,10 @@
     },
     "plugins": ["@typescript-eslint", "react"],
     "rules": {
+        "@typescript-eslint/no-empty-function": [
+            "error",
+            { "allow": ["methods"] }
+        ],
         "no-debugger": "warn",
         "no-console": "warn",
         "import/prefer-default-export": "off",
