fix: sign up input width

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "astonreact",
+    "homepage": "https://wldbrrt.github.io/AstonReact",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
